<resources>
    <string name="app_name">FitMart</string>


    <string name="s1">Sign Up</string>
    <string name="s2">Sign In</string>
    <string name="s3">First Name</string>
    <string name="s4">Last Name</string>
    <string name="s5">Mobile</string>
    <string name="s6">Email</string>
    <string name="s7">Password</string>

    <string name="h1">My Profile</string>
    <string name="h2">Address Line 1</string>
    <string name="h3">Address Line 2</string>
    <string name="h4">City</string>
    <string name="h5">Postal Code</string>
    <string name="h6">Update Profile</string>
    <string name="h7">Categories</string>

    <string name="p1">Add Product</string>
    <string name="p2">Product Title</string>
    <string name="p3">Product Description</string>
    <string name="p4">Price</string>
    <string name="p7">Quantity</string>
    <string name="p5">Category</string>
    <string name="p6">Delivery fee</string>

    <string name="a1">Add to Cart</string>
    <string name="a2">Buy Now</string>
    <string name="a3">CheckOut</string>

    <string name="d1">CheckOut</string>
    <string name="d2">Billing Details</string>
    <string name="d3">Proceed to CheckOut</string>
    <string name="d4">Same as your current address?</string>
    <string name="d5">CheckOut</string>
    <string name="d6">CheckOut</string>

    <string name="t1">Name</string>
    <string name="t2">Experience</string>
    <string name="t3">Specialization</string>
    <string name="t4">Payment for an Hour</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>